--- a/requirements.txt
+++ b/requirements.txt
@@ -1,5 +1,4 @@
-setuptools
-Flask==2.3.3
-chromedriver-autoinstaller==0.6.1
+Flask==3.0.3
 beautifulsoup4==4.12.3
-selenium==4.21.0
+playwright==1.43.0
+
