--- a/render.yaml
+++ b/render.yaml
@@ -2,9 +2,10 @@ services:
   - type: web
     name: alltrails-scraper
     env: python
-    buildCommand: pip install -r requirements.txt
-    startCommand: playwright install && python app.py
     plan: free
-    envVars:
-      - key: PYTHON_VERSION
-        value: 3.10
+    buildCommand: |
+      pip install -r requirements.txt
+      playwright install
+    startCommand: python app.py
+    build:
+      runtime: python-3.10
