--- a/render.yaml
+++ b/render.yaml
@@ -1,13 +1,13 @@
 services:
   - type: web
-    name: alltrails-scraper
-    env: python
+    name: national-parks-scraper
+    runtime: python
     plan: free
+    region: oregon
     buildCommand: |
-      apt-get update && apt-get install -y wget gnupg ca-certificates curl
-      apt-get install -y libnss3 libatk1.0-0 libatk-bridge2.0-0 libcups2 libxcomposite1 libxdamage1 libxrandr2 libgbm1 libasound2 libxss1 libxtst6 fonts-liberation libappindicator3-1 libpangocairo-1.0-0 libxshmfence1
       pip install -r requirements.txt
       playwright install chromium
     startCommand: python app.py
-    build:
-      runtime: python-3.10
+    envVars:
+      - key: PYTHON_VERSION
+        value: 3.10.12
